parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> procedure_list
Rule 2     procedure_list -> procedure
Rule 3     procedure_list -> procedure_list procedure
Rule 4     param_list -> type ID
Rule 5     param_list -> param_list COMMA type ID
Rule 6     procedure -> PROCEDURE ID LPAREN RPAREN body
Rule 7     procedure -> PROCEDURE ID LPAREN param_list RPAREN body
Rule 8     body -> statement
Rule 9     body -> body statement
Rule 10    body -> empty
Rule 11    empty -> <empty>
Rule 12    type -> INT
Rule 13    type -> STACK
Rule 14    expr -> expr PLUS expr
Rule 15    expr -> expr MINUS expr
Rule 16    expr -> expr PROD expr
Rule 17    expr -> expr DIV expr
Rule 18    expr -> expr EXP expr
Rule 19    expr -> expr MOD expr
Rule 20    expr -> LPAREN expr RPAREN
Rule 21    expr -> NUMBER
Rule 22    expr -> ID
Rule 23    statement -> type ID
Rule 24    statement -> ID PLUSEQUALS expr
Rule 25    statement -> ID MINUSEQUALS expr
Rule 26    statement -> ID PRODEQUALS expr
Rule 27    statement -> ID DIVEQUALS expr
Rule 28    statement -> ID EXPEQUALS expr
Rule 29    statement -> ID MODEQUALS expr
Rule 30    statement -> ID SWAP expr
Rule 31    value -> NUMBER
Rule 32    value -> NIL
Rule 33    value -> ID
Rule 34    statement -> LOCAL type ID EQUALS value
Rule 35    statement -> DELOCAL type ID EQUALS value
Rule 36    statement -> DELOCAL type ID
Rule 37    arg_list -> ID
Rule 38    arg_list -> arg_list COMMA ID
Rule 39    statement -> CALL ID LPAREN RPAREN
Rule 40    statement -> CALL ID LPAREN arg_list RPAREN
Rule 41    statement -> ID LPAREN RPAREN
Rule 42    statement -> ID LPAREN arg_list RPAREN
Rule 43    statement -> UNCALL ID LPAREN RPAREN
Rule 44    statement -> UNCALL ID LPAREN arg_list RPAREN
Rule 45    condition -> expr EQUALS expr
Rule 46    statement -> FROM condition LOOP body UNTIL condition
Rule 47    statement -> IF condition THEN body FI condition
Rule 48    statement -> IF condition THEN body ELSE body FI condition

Terminals, with rules where they appear

CALL                 : 39 40
COMMA                : 5 38
DELOCAL              : 35 36
DIV                  : 17
DIVEQUALS            : 27
ELSE                 : 48
EQUALS               : 34 35 45
EXP                  : 18
EXPEQUALS            : 28
FI                   : 47 48
FROM                 : 46
ID                   : 4 5 6 7 22 23 24 25 26 27 28 29 30 33 34 35 36 37 38 39 40 41 42 43 44
IF                   : 47 48
INT                  : 12
LOCAL                : 34
LOOP                 : 46
LPAREN               : 6 7 20 39 40 41 42 43 44
MINUS                : 15
MINUSEQUALS          : 25
MOD                  : 19
MODEQUALS            : 29
NIL                  : 32
NUMBER               : 21 31
PLUS                 : 14
PLUSEQUALS           : 24
PROCEDURE            : 6 7
PROD                 : 16
PRODEQUALS           : 26
RPAREN               : 6 7 20 39 40 41 42 43 44
STACK                : 13
SWAP                 : 30
THEN                 : 47 48
UNCALL               : 43 44
UNTIL                : 46
error                : 

Nonterminals, with rules where they appear

arg_list             : 38 40 42 44
body                 : 6 7 9 46 47 48 48
condition            : 46 46 47 47 48 48
empty                : 10
expr                 : 14 14 15 15 16 16 17 17 18 18 19 19 20 24 25 26 27 28 29 30 45 45
param_list           : 5 7
procedure            : 2 3
procedure_list       : 1 3
program              : 0
statement            : 8 9
type                 : 4 5 23 34 35 36
value                : 34 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . procedure_list
    (2) procedure_list -> . procedure
    (3) procedure_list -> . procedure_list procedure
    (6) procedure -> . PROCEDURE ID LPAREN RPAREN body
    (7) procedure -> . PROCEDURE ID LPAREN param_list RPAREN body

    PROCEDURE       shift and go to state 4

    program                        shift and go to state 1
    procedure_list                 shift and go to state 2
    procedure                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> procedure_list .
    (3) procedure_list -> procedure_list . procedure
    (6) procedure -> . PROCEDURE ID LPAREN RPAREN body
    (7) procedure -> . PROCEDURE ID LPAREN param_list RPAREN body

    $end            reduce using rule 1 (program -> procedure_list .)
    PROCEDURE       shift and go to state 4

    procedure                      shift and go to state 5

state 3

    (2) procedure_list -> procedure .

    PROCEDURE       reduce using rule 2 (procedure_list -> procedure .)
    $end            reduce using rule 2 (procedure_list -> procedure .)


state 4

    (6) procedure -> PROCEDURE . ID LPAREN RPAREN body
    (7) procedure -> PROCEDURE . ID LPAREN param_list RPAREN body

    ID              shift and go to state 6


state 5

    (3) procedure_list -> procedure_list procedure .

    PROCEDURE       reduce using rule 3 (procedure_list -> procedure_list procedure .)
    $end            reduce using rule 3 (procedure_list -> procedure_list procedure .)


state 6

    (6) procedure -> PROCEDURE ID . LPAREN RPAREN body
    (7) procedure -> PROCEDURE ID . LPAREN param_list RPAREN body

    LPAREN          shift and go to state 7


state 7

    (6) procedure -> PROCEDURE ID LPAREN . RPAREN body
    (7) procedure -> PROCEDURE ID LPAREN . param_list RPAREN body
    (4) param_list -> . type ID
    (5) param_list -> . param_list COMMA type ID
    (12) type -> . INT
    (13) type -> . STACK

    RPAREN          shift and go to state 8
    INT             shift and go to state 11
    STACK           shift and go to state 12

    param_list                     shift and go to state 9
    type                           shift and go to state 10

state 8

    (6) procedure -> PROCEDURE ID LPAREN RPAREN . body
    (8) body -> . statement
    (9) body -> . body statement
    (10) body -> . empty
    (23) statement -> . type ID
    (24) statement -> . ID PLUSEQUALS expr
    (25) statement -> . ID MINUSEQUALS expr
    (26) statement -> . ID PRODEQUALS expr
    (27) statement -> . ID DIVEQUALS expr
    (28) statement -> . ID EXPEQUALS expr
    (29) statement -> . ID MODEQUALS expr
    (30) statement -> . ID SWAP expr
    (34) statement -> . LOCAL type ID EQUALS value
    (35) statement -> . DELOCAL type ID EQUALS value
    (36) statement -> . DELOCAL type ID
    (39) statement -> . CALL ID LPAREN RPAREN
    (40) statement -> . CALL ID LPAREN arg_list RPAREN
    (41) statement -> . ID LPAREN RPAREN
    (42) statement -> . ID LPAREN arg_list RPAREN
    (43) statement -> . UNCALL ID LPAREN RPAREN
    (44) statement -> . UNCALL ID LPAREN arg_list RPAREN
    (46) statement -> . FROM condition LOOP body UNTIL condition
    (47) statement -> . IF condition THEN body FI condition
    (48) statement -> . IF condition THEN body ELSE body FI condition
    (11) empty -> .
    (12) type -> . INT
    (13) type -> . STACK

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LOCAL resolved as shift
  ! shift/reduce conflict for DELOCAL resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for UNCALL resolved as shift
  ! shift/reduce conflict for FROM resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STACK resolved as shift
    ID              shift and go to state 13
    LOCAL           shift and go to state 18
    DELOCAL         shift and go to state 19
    CALL            shift and go to state 20
    UNCALL          shift and go to state 21
    FROM            shift and go to state 22
    IF              shift and go to state 23
    PROCEDURE       reduce using rule 11 (empty -> .)
    $end            reduce using rule 11 (empty -> .)
    INT             shift and go to state 11
    STACK           shift and go to state 12

  ! ID              [ reduce using rule 11 (empty -> .) ]
  ! LOCAL           [ reduce using rule 11 (empty -> .) ]
  ! DELOCAL         [ reduce using rule 11 (empty -> .) ]
  ! CALL            [ reduce using rule 11 (empty -> .) ]
  ! UNCALL          [ reduce using rule 11 (empty -> .) ]
  ! FROM            [ reduce using rule 11 (empty -> .) ]
  ! IF              [ reduce using rule 11 (empty -> .) ]
  ! INT             [ reduce using rule 11 (empty -> .) ]
  ! STACK           [ reduce using rule 11 (empty -> .) ]

    body                           shift and go to state 14
    statement                      shift and go to state 15
    empty                          shift and go to state 16
    type                           shift and go to state 17

state 9

    (7) procedure -> PROCEDURE ID LPAREN param_list . RPAREN body
    (5) param_list -> param_list . COMMA type ID

    RPAREN          shift and go to state 24
    COMMA           shift and go to state 25


state 10

    (4) param_list -> type . ID

    ID              shift and go to state 26


state 11

    (12) type -> INT .

    ID              reduce using rule 12 (type -> INT .)


state 12

    (13) type -> STACK .

    ID              reduce using rule 13 (type -> STACK .)


state 13

    (24) statement -> ID . PLUSEQUALS expr
    (25) statement -> ID . MINUSEQUALS expr
    (26) statement -> ID . PRODEQUALS expr
    (27) statement -> ID . DIVEQUALS expr
    (28) statement -> ID . EXPEQUALS expr
    (29) statement -> ID . MODEQUALS expr
    (30) statement -> ID . SWAP expr
    (41) statement -> ID . LPAREN RPAREN
    (42) statement -> ID . LPAREN arg_list RPAREN

    PLUSEQUALS      shift and go to state 27
    MINUSEQUALS     shift and go to state 28
    PRODEQUALS      shift and go to state 29
    DIVEQUALS       shift and go to state 30
    EXPEQUALS       shift and go to state 31
    MODEQUALS       shift and go to state 32
    SWAP            shift and go to state 33
    LPAREN          shift and go to state 34


state 14

    (6) procedure -> PROCEDURE ID LPAREN RPAREN body .
    (9) body -> body . statement
    (23) statement -> . type ID
    (24) statement -> . ID PLUSEQUALS expr
    (25) statement -> . ID MINUSEQUALS expr
    (26) statement -> . ID PRODEQUALS expr
    (27) statement -> . ID DIVEQUALS expr
    (28) statement -> . ID EXPEQUALS expr
    (29) statement -> . ID MODEQUALS expr
    (30) statement -> . ID SWAP expr
    (34) statement -> . LOCAL type ID EQUALS value
    (35) statement -> . DELOCAL type ID EQUALS value
    (36) statement -> . DELOCAL type ID
    (39) statement -> . CALL ID LPAREN RPAREN
    (40) statement -> . CALL ID LPAREN arg_list RPAREN
    (41) statement -> . ID LPAREN RPAREN
    (42) statement -> . ID LPAREN arg_list RPAREN
    (43) statement -> . UNCALL ID LPAREN RPAREN
    (44) statement -> . UNCALL ID LPAREN arg_list RPAREN
    (46) statement -> . FROM condition LOOP body UNTIL condition
    (47) statement -> . IF condition THEN body FI condition
    (48) statement -> . IF condition THEN body ELSE body FI condition
    (12) type -> . INT
    (13) type -> . STACK

    PROCEDURE       reduce using rule 6 (procedure -> PROCEDURE ID LPAREN RPAREN body .)
    $end            reduce using rule 6 (procedure -> PROCEDURE ID LPAREN RPAREN body .)
    ID              shift and go to state 13
    LOCAL           shift and go to state 18
    DELOCAL         shift and go to state 19
    CALL            shift and go to state 20
    UNCALL          shift and go to state 21
    FROM            shift and go to state 22
    IF              shift and go to state 23
    INT             shift and go to state 11
    STACK           shift and go to state 12

    statement                      shift and go to state 35
    type                           shift and go to state 17

state 15

    (8) body -> statement .

    ID              reduce using rule 8 (body -> statement .)
    LOCAL           reduce using rule 8 (body -> statement .)
    DELOCAL         reduce using rule 8 (body -> statement .)
    CALL            reduce using rule 8 (body -> statement .)
    UNCALL          reduce using rule 8 (body -> statement .)
    FROM            reduce using rule 8 (body -> statement .)
    IF              reduce using rule 8 (body -> statement .)
    INT             reduce using rule 8 (body -> statement .)
    STACK           reduce using rule 8 (body -> statement .)
    PROCEDURE       reduce using rule 8 (body -> statement .)
    $end            reduce using rule 8 (body -> statement .)
    UNTIL           reduce using rule 8 (body -> statement .)
    FI              reduce using rule 8 (body -> statement .)
    ELSE            reduce using rule 8 (body -> statement .)


state 16

    (10) body -> empty .

    ID              reduce using rule 10 (body -> empty .)
    LOCAL           reduce using rule 10 (body -> empty .)
    DELOCAL         reduce using rule 10 (body -> empty .)
    CALL            reduce using rule 10 (body -> empty .)
    UNCALL          reduce using rule 10 (body -> empty .)
    FROM            reduce using rule 10 (body -> empty .)
    IF              reduce using rule 10 (body -> empty .)
    INT             reduce using rule 10 (body -> empty .)
    STACK           reduce using rule 10 (body -> empty .)
    PROCEDURE       reduce using rule 10 (body -> empty .)
    $end            reduce using rule 10 (body -> empty .)
    UNTIL           reduce using rule 10 (body -> empty .)
    FI              reduce using rule 10 (body -> empty .)
    ELSE            reduce using rule 10 (body -> empty .)


state 17

    (23) statement -> type . ID

    ID              shift and go to state 36


state 18

    (34) statement -> LOCAL . type ID EQUALS value
    (12) type -> . INT
    (13) type -> . STACK

    INT             shift and go to state 11
    STACK           shift and go to state 12

    type                           shift and go to state 37

state 19

    (35) statement -> DELOCAL . type ID EQUALS value
    (36) statement -> DELOCAL . type ID
    (12) type -> . INT
    (13) type -> . STACK

    INT             shift and go to state 11
    STACK           shift and go to state 12

    type                           shift and go to state 38

state 20

    (39) statement -> CALL . ID LPAREN RPAREN
    (40) statement -> CALL . ID LPAREN arg_list RPAREN

    ID              shift and go to state 39


state 21

    (43) statement -> UNCALL . ID LPAREN RPAREN
    (44) statement -> UNCALL . ID LPAREN arg_list RPAREN

    ID              shift and go to state 40


state 22

    (46) statement -> FROM . condition LOOP body UNTIL condition
    (45) condition -> . expr EQUALS expr
    (14) expr -> . expr PLUS expr
    (15) expr -> . expr MINUS expr
    (16) expr -> . expr PROD expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr EXP expr
    (19) expr -> . expr MOD expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . NUMBER
    (22) expr -> . ID

    LPAREN          shift and go to state 43
    NUMBER          shift and go to state 44
    ID              shift and go to state 45

    condition                      shift and go to state 41
    expr                           shift and go to state 42

state 23

    (47) statement -> IF . condition THEN body FI condition
    (48) statement -> IF . condition THEN body ELSE body FI condition
    (45) condition -> . expr EQUALS expr
    (14) expr -> . expr PLUS expr
    (15) expr -> . expr MINUS expr
    (16) expr -> . expr PROD expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr EXP expr
    (19) expr -> . expr MOD expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . NUMBER
    (22) expr -> . ID

    LPAREN          shift and go to state 43
    NUMBER          shift and go to state 44
    ID              shift and go to state 45

    condition                      shift and go to state 46
    expr                           shift and go to state 42

state 24

    (7) procedure -> PROCEDURE ID LPAREN param_list RPAREN . body
    (8) body -> . statement
    (9) body -> . body statement
    (10) body -> . empty
    (23) statement -> . type ID
    (24) statement -> . ID PLUSEQUALS expr
    (25) statement -> . ID MINUSEQUALS expr
    (26) statement -> . ID PRODEQUALS expr
    (27) statement -> . ID DIVEQUALS expr
    (28) statement -> . ID EXPEQUALS expr
    (29) statement -> . ID MODEQUALS expr
    (30) statement -> . ID SWAP expr
    (34) statement -> . LOCAL type ID EQUALS value
    (35) statement -> . DELOCAL type ID EQUALS value
    (36) statement -> . DELOCAL type ID
    (39) statement -> . CALL ID LPAREN RPAREN
    (40) statement -> . CALL ID LPAREN arg_list RPAREN
    (41) statement -> . ID LPAREN RPAREN
    (42) statement -> . ID LPAREN arg_list RPAREN
    (43) statement -> . UNCALL ID LPAREN RPAREN
    (44) statement -> . UNCALL ID LPAREN arg_list RPAREN
    (46) statement -> . FROM condition LOOP body UNTIL condition
    (47) statement -> . IF condition THEN body FI condition
    (48) statement -> . IF condition THEN body ELSE body FI condition
    (11) empty -> .
    (12) type -> . INT
    (13) type -> . STACK

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LOCAL resolved as shift
  ! shift/reduce conflict for DELOCAL resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for UNCALL resolved as shift
  ! shift/reduce conflict for FROM resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STACK resolved as shift
    ID              shift and go to state 13
    LOCAL           shift and go to state 18
    DELOCAL         shift and go to state 19
    CALL            shift and go to state 20
    UNCALL          shift and go to state 21
    FROM            shift and go to state 22
    IF              shift and go to state 23
    PROCEDURE       reduce using rule 11 (empty -> .)
    $end            reduce using rule 11 (empty -> .)
    INT             shift and go to state 11
    STACK           shift and go to state 12

  ! ID              [ reduce using rule 11 (empty -> .) ]
  ! LOCAL           [ reduce using rule 11 (empty -> .) ]
  ! DELOCAL         [ reduce using rule 11 (empty -> .) ]
  ! CALL            [ reduce using rule 11 (empty -> .) ]
  ! UNCALL          [ reduce using rule 11 (empty -> .) ]
  ! FROM            [ reduce using rule 11 (empty -> .) ]
  ! IF              [ reduce using rule 11 (empty -> .) ]
  ! INT             [ reduce using rule 11 (empty -> .) ]
  ! STACK           [ reduce using rule 11 (empty -> .) ]

    body                           shift and go to state 47
    statement                      shift and go to state 15
    empty                          shift and go to state 16
    type                           shift and go to state 17

state 25

    (5) param_list -> param_list COMMA . type ID
    (12) type -> . INT
    (13) type -> . STACK

    INT             shift and go to state 11
    STACK           shift and go to state 12

    type                           shift and go to state 48

state 26

    (4) param_list -> type ID .

    RPAREN          reduce using rule 4 (param_list -> type ID .)
    COMMA           reduce using rule 4 (param_list -> type ID .)


state 27

    (24) statement -> ID PLUSEQUALS . expr
    (14) expr -> . expr PLUS expr
    (15) expr -> . expr MINUS expr
    (16) expr -> . expr PROD expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr EXP expr
    (19) expr -> . expr MOD expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . NUMBER
    (22) expr -> . ID

    LPAREN          shift and go to state 43
    NUMBER          shift and go to state 44
    ID              shift and go to state 45

    expr                           shift and go to state 49

state 28

    (25) statement -> ID MINUSEQUALS . expr
    (14) expr -> . expr PLUS expr
    (15) expr -> . expr MINUS expr
    (16) expr -> . expr PROD expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr EXP expr
    (19) expr -> . expr MOD expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . NUMBER
    (22) expr -> . ID

    LPAREN          shift and go to state 43
    NUMBER          shift and go to state 44
    ID              shift and go to state 45

    expr                           shift and go to state 50

state 29

    (26) statement -> ID PRODEQUALS . expr
    (14) expr -> . expr PLUS expr
    (15) expr -> . expr MINUS expr
    (16) expr -> . expr PROD expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr EXP expr
    (19) expr -> . expr MOD expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . NUMBER
    (22) expr -> . ID

    LPAREN          shift and go to state 43
    NUMBER          shift and go to state 44
    ID              shift and go to state 45

    expr                           shift and go to state 51

state 30

    (27) statement -> ID DIVEQUALS . expr
    (14) expr -> . expr PLUS expr
    (15) expr -> . expr MINUS expr
    (16) expr -> . expr PROD expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr EXP expr
    (19) expr -> . expr MOD expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . NUMBER
    (22) expr -> . ID

    LPAREN          shift and go to state 43
    NUMBER          shift and go to state 44
    ID              shift and go to state 45

    expr                           shift and go to state 52

state 31

    (28) statement -> ID EXPEQUALS . expr
    (14) expr -> . expr PLUS expr
    (15) expr -> . expr MINUS expr
    (16) expr -> . expr PROD expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr EXP expr
    (19) expr -> . expr MOD expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . NUMBER
    (22) expr -> . ID

    LPAREN          shift and go to state 43
    NUMBER          shift and go to state 44
    ID              shift and go to state 45

    expr                           shift and go to state 53

state 32

    (29) statement -> ID MODEQUALS . expr
    (14) expr -> . expr PLUS expr
    (15) expr -> . expr MINUS expr
    (16) expr -> . expr PROD expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr EXP expr
    (19) expr -> . expr MOD expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . NUMBER
    (22) expr -> . ID

    LPAREN          shift and go to state 43
    NUMBER          shift and go to state 44
    ID              shift and go to state 45

    expr                           shift and go to state 54

state 33

    (30) statement -> ID SWAP . expr
    (14) expr -> . expr PLUS expr
    (15) expr -> . expr MINUS expr
    (16) expr -> . expr PROD expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr EXP expr
    (19) expr -> . expr MOD expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . NUMBER
    (22) expr -> . ID

    LPAREN          shift and go to state 43
    NUMBER          shift and go to state 44
    ID              shift and go to state 45

    expr                           shift and go to state 55

state 34

    (41) statement -> ID LPAREN . RPAREN
    (42) statement -> ID LPAREN . arg_list RPAREN
    (37) arg_list -> . ID
    (38) arg_list -> . arg_list COMMA ID

    RPAREN          shift and go to state 57
    ID              shift and go to state 56

    arg_list                       shift and go to state 58

state 35

    (9) body -> body statement .

    ID              reduce using rule 9 (body -> body statement .)
    LOCAL           reduce using rule 9 (body -> body statement .)
    DELOCAL         reduce using rule 9 (body -> body statement .)
    CALL            reduce using rule 9 (body -> body statement .)
    UNCALL          reduce using rule 9 (body -> body statement .)
    FROM            reduce using rule 9 (body -> body statement .)
    IF              reduce using rule 9 (body -> body statement .)
    INT             reduce using rule 9 (body -> body statement .)
    STACK           reduce using rule 9 (body -> body statement .)
    PROCEDURE       reduce using rule 9 (body -> body statement .)
    $end            reduce using rule 9 (body -> body statement .)
    UNTIL           reduce using rule 9 (body -> body statement .)
    FI              reduce using rule 9 (body -> body statement .)
    ELSE            reduce using rule 9 (body -> body statement .)


state 36

    (23) statement -> type ID .

    ID              reduce using rule 23 (statement -> type ID .)
    LOCAL           reduce using rule 23 (statement -> type ID .)
    DELOCAL         reduce using rule 23 (statement -> type ID .)
    CALL            reduce using rule 23 (statement -> type ID .)
    UNCALL          reduce using rule 23 (statement -> type ID .)
    FROM            reduce using rule 23 (statement -> type ID .)
    IF              reduce using rule 23 (statement -> type ID .)
    INT             reduce using rule 23 (statement -> type ID .)
    STACK           reduce using rule 23 (statement -> type ID .)
    PROCEDURE       reduce using rule 23 (statement -> type ID .)
    $end            reduce using rule 23 (statement -> type ID .)
    UNTIL           reduce using rule 23 (statement -> type ID .)
    FI              reduce using rule 23 (statement -> type ID .)
    ELSE            reduce using rule 23 (statement -> type ID .)


state 37

    (34) statement -> LOCAL type . ID EQUALS value

    ID              shift and go to state 59


state 38

    (35) statement -> DELOCAL type . ID EQUALS value
    (36) statement -> DELOCAL type . ID

    ID              shift and go to state 60


state 39

    (39) statement -> CALL ID . LPAREN RPAREN
    (40) statement -> CALL ID . LPAREN arg_list RPAREN

    LPAREN          shift and go to state 61


state 40

    (43) statement -> UNCALL ID . LPAREN RPAREN
    (44) statement -> UNCALL ID . LPAREN arg_list RPAREN

    LPAREN          shift and go to state 62


state 41

    (46) statement -> FROM condition . LOOP body UNTIL condition

    LOOP            shift and go to state 63


state 42

    (45) condition -> expr . EQUALS expr
    (14) expr -> expr . PLUS expr
    (15) expr -> expr . MINUS expr
    (16) expr -> expr . PROD expr
    (17) expr -> expr . DIV expr
    (18) expr -> expr . EXP expr
    (19) expr -> expr . MOD expr

    EQUALS          shift and go to state 64
    PLUS            shift and go to state 65
    MINUS           shift and go to state 66
    PROD            shift and go to state 67
    DIV             shift and go to state 68
    EXP             shift and go to state 69
    MOD             shift and go to state 70


state 43

    (20) expr -> LPAREN . expr RPAREN
    (14) expr -> . expr PLUS expr
    (15) expr -> . expr MINUS expr
    (16) expr -> . expr PROD expr
    (17) expr -> . expr DIV expr
    (18) expr -> . expr EXP expr
    (19) expr -> . expr MOD expr
    (20) expr -> . LPAREN expr RPAREN
    (21) expr -> . NUMBER
    (22) expr -> . ID

    LPAREN          shift and go to state 43
    NUMBER          shift and go to state 44
    ID              shift and go to state 45

    expr                           shift and go to state 71

state 44

    (21) expr -> NUMBER .
